removed non implemented menu items

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Gareth Williams - No Title</title>      
+    <title>Gareth Williams - RandomSyntax.Net</title>      
     <link rel="icon" type="image/png" href="/images/fa-rocket_16px.png">
 
     <!-- Bootstrap Core CSS -->
@@ -72,20 +72,6 @@
 				<a href="/archives">   					
 					<i class="icon fa fa-archive"></i>
 					Archives     
-				</a>
-			</li>
-		
-			<li class="">
-				<a href="/about">   					
-					<i class="icon fa fa-user"></i>
-					About     
-				</a>
-			</li>
-		
-			<li class="">
-				<a href="/contact">   					
-					<i class="icon fa fa-envelope"></i>
-					Contact     
 				</a>
 			</li>
 		
