mopdified text of post - Auto Bed Levelling

--- a/auto-bed-levelling/index.html
+++ b/auto-bed-levelling/index.html
@@ -184,7 +184,7 @@
 
     
     <!-- Content -->
-    <p>Video of the G29 command.</p>
+    <p>Video of the G29 (Auto level) command.</p>
 <div style="max-width: 700px"><br>  <div class="video-container"><iframe src="//player.vimeo.com/video/98630132" frameborder="0" allowfullscreen></iframe></div><br></div>
 
 <p>This process involves using 3 Force Sense Resistors (FSR’s) in order to use the actual print head as the z-probe.</p>
