Incorect url for redirect

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <meta http-equiv="pragma" content="no-cache" />
 </head>    
 <body> 
-  <p>This page has moved <a href="https://randomsyntax.net">https://randomsyntax.net</a>.</p> 
+  <p>This page has moved <a href="https://randomsyntax.net/blog">https://randomsyntax.net/blog</a>.</p> 
 </body>  
 </html> 
